Fix margin bug on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -1309,9 +1309,6 @@ footer {
 
 /* Bottom Navigation */
 
-body {
-    margin: 0 0 55px 0;
-}
 .nav {
   left: 0;
 }
